Fixed broken styles and adjusted main page info

--- a/src/App.css
+++ b/src/App.css
@@ -211,10 +211,14 @@ body {
   margin-top: 20px;
 }
 
+.skills-container {
+  margin-top: 300px;
+}
+
 .skill {
   font-size: 100px;
   text-align: right;
-  padding-top: 20px;
+  padding-top: 40px;
   cursor: pointer;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -224,7 +228,7 @@ body {
 }
 
 .skills {
-  margin: 20px 160px 0px 0px;
+  margin: 0px 160px 0px 0px;
   font-size: 70px;
   color: rgba(247, 243, 234, 0.9);
 }
@@ -243,7 +247,7 @@ body {
 
 .down-arrow {
   width: 10%;
-  margin-left: 920px;
+  margin-left: 820px;
   background-color: rgba(247, 243, 234, 0.5);
   border-radius: 50%;
   padding: 10px;
